Revision history for XML-Descent

0.0.1   2006-11-22
        Initial release.

0.0.2   2006-12-13
        Removed orphaned reference to 'stash' in documentation

0.0.3   2007-02-23
        Added machine readable license to META.yml

0.0.4   2007-02-23
        Removed silly tutorial module. Will write some runnable
        examples instead.

0.10    2007-11-22
        Removed dependencies on Class::Std, version.pm

0.11    2007-11-22
        Removed garbage at eof.

1.00    2009-03-10
        Tidy up documentation.
        Allow on to accept multiple handler specs.

1.01    2009-03-10
        Fix inherit and test.